--- a/control-access/src/app/profile-form/profile-form.component.html
+++ b/control-access/src/app/profile-form/profile-form.component.html
@@ -2,7 +2,7 @@
     <label>Name</label>
     <input formControlName="name">
     <label>Rating</label>
-    <app-rating-stars [control]="form.controls.rating"></app-rating-stars>
+    <app-rating-stars [control]="form.controls.rating" />
     <button [disabled]="form.invalid" type="submit">Submit</button>
 </form>
 
