--- a/deferred/src/app/page/page.component.html
+++ b/deferred/src/app/page/page.component.html
@@ -12,10 +12,8 @@
     Broadway in Anaheim, Calif. on March 16. The Van Doren Rubber Company is unique in that it manufactures shoes on
     premises and sells them directly to the public.
 </p>
-<app-product-container
-        [product]="products[0]"
-        class="start">
-</app-product-container>
+<app-product-container [product]="products[0]"
+        class="start" />
 <p>
     On that first morning, 12 customers purchase shoes, which are made that day and ready for pick-up in the afternoon.
 </p>
@@ -37,10 +35,8 @@
     rage in Southern California and will come to be the original Slip-On silhouette that will be known as an icon for
     generations.
 </p>
-<app-product-container
-        [product]="products[1]"
-        class="end">
-</app-product-container>
+<app-product-container [product]="products[1]"
+        class="end" />
 <p>
     The Sk8-Hi was introduced in 1978 as "Style 38," and showcased the now-iconic Vans Sidestripe on yet another
     innovative silhouette. As only the second model featuring the recognizable marker formerly known as the "jazz
@@ -61,10 +57,8 @@
     Broadway in Anaheim, Calif. on March 16. The Van Doren Rubber Company is unique in that it manufactures shoes on
     premises and sells them directly to the public.
 </p>
-<app-product-container
-        [product]="products[2]"
-        class="start">
-</app-product-container>
+<app-product-container [product]="products[2]"
+        class="start" />
 <p>
     On that first morning, 12 customers purchase shoes, which are made that day and ready for pick-up in the afternoon.
 </p>
@@ -86,10 +80,8 @@
     rage in Southern California and will come to be the original Slip-On silhouette that will be known as an icon for
     generations.
 </p>
-<app-product-container
-        [product]="products[3]"
-        class="end">
-</app-product-container>
+<app-product-container [product]="products[3]"
+        class="end" />
 <p>
     The Sk8-Hi was introduced in 1978 as "Style 38," and showcased the now-iconic Vans Sidestripe on yet another
     innovative silhouette. As only the second model featuring the recognizable marker formerly known as the "jazz
@@ -111,10 +103,8 @@
     Broadway in Anaheim, Calif. on March 16. The Van Doren Rubber Company is unique in that it manufactures shoes on
     premises and sells them directly to the public.
 </p>
-<app-product-container
-        [product]="products[4]"
-        class="start">
-</app-product-container>
+<app-product-container [product]="products[4]"
+        class="start" />
 <p>
     On that first morning, 12 customers purchase shoes, which are made that day and ready for pick-up in the afternoon.
 </p>
@@ -136,10 +126,8 @@
     rage in Southern California and will come to be the original Slip-On silhouette that will be known as an icon for
     generations.
 </p>
-<app-product-container
-        [product]="products[5]"
-        class="end">
-</app-product-container>
+<app-product-container [product]="products[5]"
+        class="end" />
 <p>
     The Sk8-Hi was introduced in 1978 as "Style 38," and showcased the now-iconic Vans Sidestripe on yet another
     innovative silhouette. As only the second model featuring the recognizable marker formerly known as the "jazz
@@ -160,10 +148,8 @@
     Broadway in Anaheim, Calif. on March 16. The Van Doren Rubber Company is unique in that it manufactures shoes on
     premises and sells them directly to the public.
 </p>
-<app-product-container
-        [product]="products[6]"
-        class="start">
-</app-product-container>
+<app-product-container [product]="products[6]"
+        class="start" />
 <p>
     On that first morning, 12 customers purchase shoes, which are made that day and ready for pick-up in the afternoon.
 </p>
@@ -185,10 +171,8 @@
     rage in Southern California and will come to be the original Slip-On silhouette that will be known as an icon for
     generations.
 </p>
-<app-product-container
-        [product]="products[7]"
-        class="end">
-</app-product-container>
+<app-product-container [product]="products[7]"
+        class="end" />
 <p>
     The Sk8-Hi was introduced in 1978 as "Style 38," and showcased the now-iconic Vans Sidestripe on yet another
     innovative silhouette. As only the second model featuring the recognizable marker formerly known as the "jazz
@@ -209,10 +193,8 @@
     Broadway in Anaheim, Calif. on March 16. The Van Doren Rubber Company is unique in that it manufactures shoes on
     premises and sells them directly to the public.
 </p>
-<app-product-container
-        [product]="products[8]"
-        class="start">
-</app-product-container>
+<app-product-container [product]="products[8]"
+        class="start" />
 <p>
     On that first morning, 12 customers purchase shoes, which are made that day and ready for pick-up in the afternoon.
 </p>
@@ -234,10 +216,8 @@
     rage in Southern California and will come to be the original Slip-On silhouette that will be known as an icon for
     generations.
 </p>
-<app-product-container
-        [product]="products[9]"
-        class="end">
-</app-product-container>
+<app-product-container [product]="products[9]"
+        class="end" />
 <p>
     The Sk8-Hi was introduced in 1978 as "Style 38," and showcased the now-iconic Vans Sidestripe on yet another
     innovative silhouette. As only the second model featuring the recognizable marker formerly known as the "jazz
@@ -258,10 +238,8 @@
     Broadway in Anaheim, Calif. on March 16. The Van Doren Rubber Company is unique in that it manufactures shoes on
     premises and sells them directly to the public.
 </p>
-<app-product-container
-        [product]="products[10]"
-        class="start">
-</app-product-container>
+<app-product-container [product]="products[10]"
+        class="start" />
 <p>
     On that first morning, 12 customers purchase shoes, which are made that day and ready for pick-up in the afternoon.
 </p>
@@ -283,10 +261,8 @@
     rage in Southern California and will come to be the original Slip-On silhouette that will be known as an icon for
     generations.
 </p>
-<app-product-container
-        [product]="products[11]"
-        class="end">
-</app-product-container>
+<app-product-container [product]="products[11]"
+        class="end" />
 <p>
     The Sk8-Hi was introduced in 1978 as "Style 38," and showcased the now-iconic Vans Sidestripe on yet another
     innovative silhouette. As only the second model featuring the recognizable marker formerly known as the "jazz
