--- a/deferred/src/app/product-container/product-container.component.html
+++ b/deferred/src/app/product-container/product-container.component.html
@@ -1,5 +1,5 @@
 @defer (on viewport) {
-    <app-product [product]="product()"></app-product>
+    <app-product [product]="product()" />
 } @placeholder {
     <div class="placeholder"></div>
 }
