--- a/grid-list-toggle/src/app/view-mode-toggle/view-mode-toggle.html
+++ b/grid-list-toggle/src/app/view-mode-toggle/view-mode-toggle.html
@@ -1,5 +1,5 @@
 <nav>
-  <h2><ng-content></ng-content></h2>
+  <h2><ng-content /></h2>
   <button 
     (click)="set('grid')" 
     [class.active]="mode() === 'grid'"
