--- a/host-animation/src/app/app.html
+++ b/host-animation/src/app/app.html
@@ -1,5 +1,5 @@
 @for (player of players; track player.name) {
-  <app-player [player]="player"></app-player>
+  <app-player [player]="player" />
 }
 @if (players.length > 0) {
   <button
