--- a/svg/src/app/app.component.html
+++ b/svg/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h2>A graph that shows the number of fruit collected</h2>
 <em>({{ fruit.length }} Total Categories)</em>
-<app-chart [chartItems]="fruit"></app-chart>
+<app-chart [chartItems]="fruit" />
 
 <h2>A graph that shows the number of cars sold</h2>
 <em>({{ carsSold.length }} Total Categories)</em>
-<app-chart [chartItems]="carsSold"></app-chart>
+<app-chart [chartItems]="carsSold" />
