--- a/toast/src/app/contact-form/contact-form.component.html
+++ b/toast/src/app/contact-form/contact-form.component.html
@@ -16,5 +16,5 @@
 </form>
 
 @if (showHelpPanel()) {
-  <app-help-panel (close)="closeHelpPanel()"></app-help-panel>
+  <app-help-panel (close)="closeHelpPanel()" />
 }
