--- a/view-content/src/app/card/card.component.html
+++ b/view-content/src/app/card/card.component.html
@@ -9,7 +9,7 @@
 
 
 <button #btn2 (click)="button2Clicked()">
-    <ng-content></ng-content>
+    <ng-content />
 </button>
 
 <div>{{ buttonText() }}</div>
